[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patcher"
version = "0.1.0"
description = "patcher"
authors = [{ name = "Faticc", email = "komeristyj07@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/Faticc/auth"
